# oneCCL

./: .buildinfo  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  advanced-configuration.html  api.html  benchmark-point-to-point.html  benchmark.html  env-variables.html  general-configuration.html  genindex.html  index.html  introduction.html  legal.html  objects.inv  programming-model.html  publish.yml  release-notes.html  sample.html  search.html  searchindex.js  third-party-programs.txt
.github/workflows/: coverity.yml
_sources/: benchmark-point-to-point.rst  benchmark.rst  env-variables.rst  index.rst  introduction.rst  programming-model.rst
_sources/benchmark-guide/: benchmark.rst
advanced-configuration/: collective-algorithms-selection.html  dmabuf.html  low-precision-datatypes.html  operation-caching.html  operation-fusion.html  operation-prioritization.html
api/: concepts.html  initialization.html  operations.html
benchmark-guide/: benchmark-point-to-point.html  benchmark.html
cmake/: helpers.cmake
doc/: requirements.txt
examples/: CMakeLists.txt
general-configuration/: operation-execution.html  transport-selection.html
introduction/: cmake-configuration.html  installation.html  sample.html
man/: OneCCL.md  doxconfig
programming-model/: device-communication.html  host-communication.html  limitations.html
src/: CMakeLists.txt  ccl_api_functions.cpp  ccl_app_api_comm_attr.cpp  ccl_cpp_communicator.cpp  ccl_cpp_environment.cpp  ccl_cpp_kvs.cpp  communicator_impl.hpp  environment_impl.hpp
src/ext/openmp/: CMakeLists.txt  openmp_ext.cpp
(+245 files in other folders)
